# kielux23

./: README.md
Folien/: kielux_treiber.tex
hello/: Makefile  hello_kernel.c
i2c_adc/: Makefile  i2c_adc.c  i2c_adc.dts
i2c_adc_iio/: Makefile  i2c_adc_iio.c
pico_i2c_adc/: CMakeLists.txt  REAMDE.md  main.bak  main.c
